2012-03-26 Puppet Labs <info@puppetlabs.com> - 0.0.2
41cedbb (#13261) Add real examples to smoke tests.
d159a78 (#13261) Add key.pp smoke test
7116c7a (#13261) Replace foo source with puppetlabs source
1ead0bf Ignore pkg directory.
9c13872 (#13289) Fix some more style violations
0ea4ffa (#13289) Change test scaffolding to use a module & manifest dir fixture path
a758247 (#13289) Clean up style violations and fix corresponding tests
99c3fd3 (#13289) Add puppet lint tests to Rakefile
5148cbf (#13125) Apt keys should be case insensitive
b9607a4 Convert apt::key to use anchors

2012-03-07 Puppet Labs <info@puppetlabs.com> - 0.0.1
d4fec56 Modify apt::source release parameter test
1132a07 (#12917) Add contributors to README
8cdaf85 (#12823) Add apt::key defined type and modify apt::source to use it
7c0d10b (#12809) $release should use $lsbdistcodename and fall back to manual input
be2cc3e (#12522) Adjust spec test for splitting purge
7dc60ae (#12522) Split purge option to spare sources.list
9059c4e Fix source specs to test all key permutations
8acb202 Add test for python-software-properties package
a4af11f Check if python-software-properties is defined before attempting to define it.
1dcbf3d Add tests for required_packages change
f3735d2 Allow duplicate $required_packages
74c8371 (#12430) Add tests for changes to apt module
97ebb2d Test two sources with the same key
1160bcd (#12526) Add ability to reverse apt { disable_keys => true }
2842d73 Add Modulefile to puppet-apt
c657742 Allow the use of the same key in multiple sources
8c27963 (#12522) Adding purge option to apt class
997c9fd (#12529) Add unit test for apt proxy settings
50f3cca (#12529) Add parameter to support setting a proxy for apt
d522877 (#12094) Replace chained .with_* with a hash
8cf1bd0 (#12094) Remove deprecated spec.opts file
2d688f4 (#12094) Add rspec-puppet tests for apt
0fb5f78 (#12094) Replace name with path in file resources
f759bc0 (#11953) Apt::force passes $version to aptitude