@@ -1,6 +1,7 @@
 # unstable.pp
 
 class apt::debian::unstable {
+  include apt
 
   # deb http://debian.mirror.iweb.ca/debian/ unstable main contrib non-free
   # deb-src http://debian.mirror.iweb.ca/debian/ unstable main contrib non-free
@@ -17,5 +18,4 @@ class apt::debian::unstable {
     key_server        => 'subkeys.pgp.net',
     pin               => '-10',
   }
-
 }
