@@ -2,18 +2,22 @@
 # pin a release in apt, useful for unstable repositories
 
 define apt::pin(
+  $ensure   = present,
   $packages = '*',
-  $priority = 0
+  $priority = 0,
+  $release  = $name
 ) {
 
   include apt::params
 
+  $preferences_d = $apt::params::preferences_d
+
   file { "${name}.pref":
-    ensure  => file,
-    path    => "${apt::params::root}/preferences.d/${name}",
+    ensure  => $ensure,
+    path    => "${preferences_d}/${name}",
     owner   => root,
     group   => root,
     mode    => '0644',
-    content => "# ${name}\nPackage: ${packages}\nPin: release a=${name}\nPin-Priority: ${priority}",
+    content => "# ${name}\nPackage: ${packages}\nPin: release a=${release}\nPin-Priority: ${priority}",
   }
 }
