@@ -2,6 +2,7 @@
 # add an apt source
 
 define apt::source(
+  $ensure = present,
   $location = '',
   $release = $lsbdistcodename,
   $repos = 'main',
@@ -15,39 +16,42 @@ define apt::source(
 ) {
 
   include apt::params
+  include apt::update
+
+  $sources_list_d = $apt::params::sources_list_d
+  $provider       = $apt::params::provider
 
   if $release == undef {
     fail('lsbdistcodename fact not available: release parameter required')
   }
 
   file { "${name}.list":
-    ensure  => file,
-    path    => "${apt::params::root}/sources.list.d/${name}.list",
+    ensure  => $ensure,
+    path    => "${sources_list_d}/${name}.list",
     owner   => root,
     group   => root,
     mode    => '0644',
     content => template("${module_name}/source.list.erb"),
+    notify  => Exec['apt_update'],
   }
 
-  if $pin != false {
-    apt::pin { $release: priority => $pin } -> File["${name}.list"]
+  if ($pin != false) and ($ensure == 'present') {
+    apt::pin { $release:
+      priority => $pin,
+      before   => File["${name}.list"]
+    }
   }
 
-  exec { "${name} apt update":
-    command     => "${apt::params::provider} update",
-    subscribe   => File["${name}.list"],
-    refreshonly => true,
-  }
-
-  if $required_packages != false {
+  if ($required_packages != false) and ($ensure == 'present') {
     exec { "Required packages: '${required_packages}' for ${name}":
-      command     => "${apt::params::provider} -y install ${required_packages}",
+      command     => "${provider} -y install ${required_packages}",
       subscribe   => File["${name}.list"],
       refreshonly => true,
     }
   }
 
-  if $key != false {
+  # We do not want to remove keys when the source is absent.
+  if ($key != false) and ($ensure == 'present') {
     apt::key { "Add key: ${key} from Apt::Source ${title}":
       ensure      => present,
       key         => $key,
