@@ -41,8 +41,6 @@ describe 'apt', :type => :class do
 
       it { should include_class("apt::params") }
 
-      it { should contain_package("python-software-properties") }
-
       it {
         if param_hash[:purge_sources_list]
         should contain_file("sources.list").with({
@@ -72,7 +70,8 @@ describe 'apt', :type => :class do
             'owner'   => "root",
             'group'   => "root",
             'purge'   => true,
-            'recurse' => true
+            'recurse' => true,
+            'notify'  => 'Exec[apt_update]'
           })
         else
           should create_file("sources.list.d").with({
@@ -81,7 +80,8 @@ describe 'apt', :type => :class do
             'owner'   => "root",
             'group'   => "root",
             'purge'   => false,
-            'recurse' => false
+            'recurse' => false,
+            'notify'  => 'Exec[apt_update]'
           })
         end
       }
@@ -89,7 +89,6 @@ describe 'apt', :type => :class do
       it {
         should contain_exec("apt_update").with({
           'command'     => "/usr/bin/apt-get update",
-          'subscribe'   => ["File[sources.list]", "File[sources.list.d]"],
           'refreshonly' => refresh_only_apt_update
         })
       }
@@ -117,7 +116,8 @@ describe 'apt', :type => :class do
           if param_hash[:proxy_host]
             should contain_file('configure-apt-proxy').with(
               'path'    => '/etc/apt/apt.conf.d/proxy',
-              'content' => "Acquire::http::Proxy \"http://#{param_hash[:proxy_host]}:#{param_hash[:proxy_port]}\";"
+              'content' => "Acquire::http::Proxy \"http://#{param_hash[:proxy_host]}:#{param_hash[:proxy_port]}\";",
+              'notify'  => "Exec[apt_update]"
             )
           else
             should_not contain_file('configure_apt_proxy')
@@ -125,10 +125,5 @@ describe 'apt', :type => :class do
         }
       end
     end
-  end
-
-  describe "it should not error if package['python-software-properties'] is already defined" do
-    let(:pre_condition) { 'package { "python-software-properties": }->Class["Apt"]' }
-    it { should contain_package("python-software-properties") }
   end
 end
